# deploy_property_model

./: .gitignore  README.md  settergetterproperties.py  test_api.py
app/: Dockerfile  property_predict.py  requirements.txt
app/bash_scripts/: build.sh  build_run.sh  run.sh
app/model_outputs/: vectorizer_prop_credit.pickle  vectorizer_prop_debit.pickle
deploy_property_model/: .gitignore  sampledockercommands.py
deploy_property_model/app/: Dockerfile  api_test.py  main.py  property_predict.py  requirements.txt  schemas.py
deploy_property_model/app_backend/: Dockerfile  api_test.py  database.py  main.py  models.py  requirements.txt
deploy_property_model/app_backend/model_outputs/: property_pred_credit.pickle  property_pred_debit.pickle
deploy_property_model/model_pipeline/: create_data.py  predict_label.py  predict_property.py
deploy_property_model/old_code/: 03_property_predict.py
fastapi_backend_unused/: main.py  models.py  schemas.py
fastapi_backend_unused/model_outputs/: todosapp.db
model_pipeline/: create_data.py  predict_label.py  predict_property.py  prediction_output.py
model_pipeline/data/train/: 2021_debit.xlsx  2022 Havu CC.CSV  2022_debit.csv  havu_credit_2025.numbers  havu_debit2024_fixed.numbers  label_pred_credit.pickle  (+1 more)
old_code/: 02_label_predict.py
stocks_analysis/: README.md  analysis.py  pyproject.toml  stock_backtest.py
stocks_analysis/src/stocks_analysis/: __init__.py  __main__.py  backtest.py
year_predictions/: predict_credit2024.py  predict_credit2025.py  predict_debit2024.py  predict_debit2025.py
(+7 files in other folders)
